add dist folder and mifified css file

--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,7 @@ body {
           background-color: #E2A0FF;
           outline: 0; }
         body #wrapper #ulWrapper #filter #sort {
+          cursor: pointer;
           display: flex;
           justify-content: center;
           align-items: center;
