--- a/sass/main.scss
+++ b/sass/main.scss
@@ -134,6 +134,7 @@ body {
                     outline: 0;
                 }
                 #sort {
+                    cursor: pointer;
                     display: flex;
                     justify-content: center;
                     align-items: center;
