--- a/sass/main.scss
+++ b/sass/main.scss
@@ -180,7 +180,7 @@ body {
                     }
                 
                 }
-                .Checked {
+                .checked {
                     color: #FFF8F0;
                     text-decoration: line-through;
                     background-color:  #454545;
