--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,7 +25,7 @@ body {
             }
         }
         
-        #newcontent {
+        #newContent {
             padding: 18px;
             width: 80%;
             margin: 3px;
@@ -38,7 +38,7 @@ body {
             }
         }
         
-        #addnewcontent {
+        #addNewContent {
             padding: 17px;
             width: 20%;
             background-color:#454545;
